--- a/learning_logs/templates/learning_logs/index.html
+++ b/learning_logs/templates/learning_logs/index.html
@@ -4,4 +4,4 @@
   <p>
      Learning Log helps you keep track of your learning, for any topic you're learning about.
   </p>
-{% endblock content %git}
+{% endblock content %}
