--- a/learning_logs/templates/learning_logs/topics.html
+++ b/learning_logs/templates/learning_logs/topics.html
@@ -9,7 +9,9 @@
   <ul>
 
     {% for topics in topic %}
-      <li>{{topic}}</li>
+      <li>
+        <a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a>
+      </li>
       {% empty %}
       <li>No topics have been added yet.</li>
       {% endfor %}
